# fem.py

./: .gitignore  LICENSE  README.rst  blind.msh  geogen.py  main.py  pyproject.toml  test.msh
docs/: conf.py  index.rst
fem/: quadrature.py  refdom.py
fem/assembler/: base.py  wave.py
fem/assembler/basis/: __init__.py  base.py  cell.py
fem/element/: __init__.py  base.py
fem/element/line/: __init__.py  l1.py  l2.py  l3.py
fem/element/tri/: __init__.py  p1.py  p2.py  p3.py
fem/mapping/: __init__.py  base.py  isoparametric.py
fem/mesh/: __init__.py  base.py  mesh2d.py
fem/solver/: __init__.py  base.py  enforce_dirichlet.py
fem/utils/: functions.py
tests/: test_element.py  test_fem_py.py  test_mapping.py
