[tool.poetry]
name = "fem.py"
version = "0.0.1"
description = ""
authors = ["Tiago Vilela <tiagovla@gmail.com>"]

packages = [
    {include = "fem", from="."}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.1"
scipy = "^1.7.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-autodoc-typehints = "^1.11.1"
numpydoc = "^1.1.0"
gmsh = "^4.8.4"
meshio = "^4.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
